adding time blocks

--- a/index.html
+++ b/index.html
@@ -31,77 +31,77 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class = "time-block row">
-        <div class = "hour">9 am</div>
+        <div class = "hour">9 AM</div>
         <textarea id = "9" class = "description" cols = "70"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">10 am</div>
+        <div class = "hour">10 AM</div>
         <textarea id = "10" class = "description" cols = "69"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">11 am</div>
+        <div class = "hour">11 AM</div>
         <textarea id = "11" class = "description" cols = "69"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">12 pm</div>
+        <div class = "hour">12 PM</div>
         <textarea id = "12" class = "description" cols = "69"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">1 pm</div>
+        <div class = "hour">1 PM</div>
         <textarea id = "13" class = "description" cols = "70"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">2 pm</div>
+        <div class = "hour">2 PM</div>
         <textarea id = "14" class = "description" cols = "70"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">3 pm</div>
+        <div class = "hour">3 PM</div>
         <textarea id = "15" class = "description" cols = "70"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">4 pm</div>
+        <div class = "hour">4 PM</div>
         <textarea id = "16" class = "description" cols = "70"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">5 pm</div>
+        <div class = "hour">5 PM</div>
         <textarea id = "17" class = "description" cols = "70"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">12 pm</div>
+        <div class = "hour">12 PM</div>
         <textarea id = "12" class = "description" cols = "69"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">1 pm</div>
+        <div class = "hour">1 PM</div>
         <textarea id = "13" class = "description" cols = "70"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">2 pm</div>
+        <div class = "hour">2 PM</div>
         <textarea id = "14" class = "description" cols = "70"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">3 pm</div>
+        <div class = "hour">3 PM</div>
         <textarea id = "15" class = "description" cols = "70"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">4 pm</div>
+        <div class = "hour">4 PM</div>
         <textarea id = "16" class = "description" cols = "70"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
       <div class = "time-block row">
-        <div class = "hour">5 pm</div>
+        <div class = "hour">5 PM</div>
         <textarea id = "17" class = "description" cols = "70"></textarea>
         <button class = "saveBtn">Save</button>
       </div>
