--- a/index.html
+++ b/index.html
@@ -27,56 +27,56 @@
     <div class="container mb-4">
       <div class="row">
           <div class="col-2 mt-4 time-block t1">9:00 AM</div>
-          <textarea class="col-8 first entertext e9"></textarea>
-          <button class="col-1 saveBtn fa fa-calendar-check-o b9"></button>
+          <textarea class="col-8 first inputText e9"></textarea>
+          <button class="col-1 saveBtn fa fa-calendar-check-o b9">Save</button>
       </div>
 
       <div class="row">
           <div class="col-2 mt-4 time-block t2">10:00 AM</div>
           <textarea class="col-8 e10"></textarea>
-          <button class="col-1 saveBtn fa fa-calendar-check-o b10"></button>
+          <button class="col-1 saveBtn fa fa-calendar-check-o b10">Save</button>
       </div>
 
       <div class="row">
           <div class="col-2 mt-4 time-block t3">11:00 AM</div>
           <textarea class="col-8 e11"></textarea>
-          <button class="col-1 saveBtn fa fa-calendar-check-o b11"></button> 
+          <button class="col-1 saveBtn fa fa-calendar-check-o b11">Save</button> 
       </div>
 
       <div class="row">
           <div class="col-2 mt-4 time-block t4">12:00 PM</div>
           <textarea class="col-8 e12"></textarea>
-          <button class="col-1 saveBtn fa fa-calendar-check-o b12"></button>
+          <button class="col-1 saveBtn fa fa-calendar-check-o b12">Save</button>
       </div>
 
       <div class="row">
           <div class="col-2 mt-4 time-block t5">1:00 PM</div>
           <textarea class="col-8 e1"></textarea>
-          <button class="col-1 saveBtn fa fa-calendar-check-o b1"></button>
+          <button class="col-1 saveBtn fa fa-calendar-check-o b1">Save</button>
       </div>
 
       <div class="row">
           <div class="col-2 mt-4 time-block t6">2:00 PM</div>
           <textarea class="col-8 e2"></textarea>
-          <button class="col-1 saveBtn fa fa-calendar-check-o b2"></button>
+          <button class="col-1 saveBtn fa fa-calendar-check-o b2">Save</button>
       </div>
 
       <div class="row">
           <div class="col-2 mt-4 time-block t7">3:00 PM</div>
           <textarea class="col-8 e3"></textarea>
-          <button class="col-1 saveBtn fa fa-calendar-check-o b3"></button>
+          <button class="col-1 saveBtn fa fa-calendar-check-o b3">Save</button>
       </div>
 
       <div class="row">
           <div class="col-2 mt-4 time-block t8">4:00 PM</div>
           <textarea class="col-8 e4"></textarea>
-          <button class="col-1 saveBtn fa fa-calendar-check-o b4"></button>
+          <button class="col-1 saveBtn fa fa-calendar-check-o b4">Save</button>
       </div>
 
       <div class="row">
           <div class="col-2 mt-4 time-block t9">5:00 PM</div>
           <textarea class="col-8 e5"></textarea>
-          <button class="col-1 saveBtn fa fa-calendar-check-o b5"></button>
+          <button class="col-1 saveBtn fa fa-calendar-check-o b5">Save</button>
       </div> 
   </div>
 
